[package]
name = "context7"
version = "0.2.3"
edition = "2024"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
base64-serde = "0.8"
chrono = { version = "0.4", features = ["serde"] }
extism-pdk = "1.4"
git-version = "0.3"
htmd = "0.1"
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[workspace]

[package.metadata.release]
publish = false
push = true
tag = true
tag-name = "v{{version}}"
